--- a/Szakdolgozat/src/szakdolgozat/patiens.form
+++ b/Szakdolgozat/src/szakdolgozat/patiens.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -45,39 +45,39 @@
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="patiens" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="front" min="-2" max="-2" attributes="0"/>
+                                          <Component id="frontl" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="jTextField1" min="-2" pref="27" max="-2" attributes="0"/>
+                                          <Component id="front" min="-2" pref="27" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="firstname" min="-2" max="-2" attributes="0"/>
+                                          <Component id="firstnamel" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-                                          <Component id="jTextField3" pref="108" max="32767" attributes="0"/>
+                                          <Component id="firstname" pref="108" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="middlename" min="-2" max="-2" attributes="0"/>
+                                          <Component id="middlenamel" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                                          <Component id="jTextField4" max="32767" attributes="0"/>
+                                          <Component id="middlename" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="birthdate" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="postcode" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="city" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="other" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="birthdatel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="postcodel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="cityl" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="otherl" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="jTextField8" max="32767" attributes="0"/>
-                                              <Component id="jTextField7" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="jTextField6" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="jTextField5" alignment="0" pref="108" max="32767" attributes="0"/>
+                                              <Component id="other" max="32767" attributes="0"/>
+                                              <Component id="city" alignment="0" max="32767" attributes="0"/>
+                                              <Component id="postcode" alignment="0" max="32767" attributes="0"/>
+                                              <Component id="birthdate" alignment="0" pref="108" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="surname" min="-2" max="-2" attributes="0"/>
+                                          <Component id="surnamel" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                                          <Component id="jTextField2" max="32767" attributes="0"/>
+                                          <Component id="surname" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -109,43 +109,43 @@
                       <Component id="patiens" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="frontl" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="front" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="surnamel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="surname" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="firstnamel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="firstname" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField3" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="middlenamel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="middlename" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="birthdatel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="birthdate" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField5" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="postcodel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="postcode" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField6" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="cityl" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="city" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField7" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="otherl" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="other" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextField8" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -179,64 +179,64 @@
         <Property name="text" type="java.lang.String" value="Betegek"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="front">
+    <Component class="javax.swing.JLabel" name="frontl">
       <Properties>
         <Property name="text" type="java.lang.String" value="El&#x151;tag:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="surname">
+    <Component class="javax.swing.JLabel" name="surnamel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Vezet&#xe9;kn&#xe9;v:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="firstname">
+    <Component class="javax.swing.JLabel" name="firstnamel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Keresztn&#xe9;v:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="middlename">
+    <Component class="javax.swing.JLabel" name="middlenamel">
       <Properties>
         <Property name="text" type="java.lang.String" value="M&#xe1;sodikn&#xe9;v:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="birthdate">
+    <Component class="javax.swing.JLabel" name="birthdatel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Sz&#xfc;let&#xe9;si d&#xe1;tum:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="postcode">
+    <Component class="javax.swing.JLabel" name="postcodel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Ir&#xe1;ny&#xed;t&#xf3;sz&#xe1;m:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="city">
+    <Component class="javax.swing.JLabel" name="cityl">
       <Properties>
         <Property name="text" type="java.lang.String" value="Telep&#xfc;l&#xe9;s:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="other">
+    <Component class="javax.swing.JLabel" name="otherl">
       <Properties>
         <Property name="text" type="java.lang.String" value="Egy&#xe9;b c&#xed;m:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="front">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="frontActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="surname">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField3">
+    <Component class="javax.swing.JTextField" name="firstname">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField4">
+    <Component class="javax.swing.JTextField" name="middlename">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField5">
+    <Component class="javax.swing.JTextField" name="birthdate">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField6">
+    <Component class="javax.swing.JTextField" name="postcode">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField7">
+    <Component class="javax.swing.JTextField" name="city">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField8">
+    <Component class="javax.swing.JTextField" name="other">
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
